<resources>
    <!--General Strings-->
    <string name="app_name">Warrior</string>

    <!--Menu Strings-->
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>

    <!--ActivityPreferences Strings-->
    <string name="activity_preferences_skiptitlescreen">Skip Title Screen</string>
    <string name="activity_preferences_skiptitlescreen_description">If selected, title screen will be skipped when a save game exists.</string>
    <string name="activity_preferences_about">About</string>
    <string name="activity_preferences_journal_capacity">Journal Capacity</string>
    <string name="activity_preferences_journal_capacity_description">This number of journal entries will be saved. Enter 0 for unlimited saved entries. (Default: 100)</string>

    <!--ActivityMain Strings-->
    <string name="activity_main_subtitle">Realism in fantasy</string>
    <string name="activity_main_button_loadgame">Load Game</string>
    <string name="activity_main_button_newgame">New Game</string>
    <string name="activity_main_button_about">About</string>
    <string name="activity_main_loadgame_failure">Save data not found.</string>

    <!--ActivityNewGame Strings-->
    <string name="activity_new_game_text">This will create a new game.</string>
    <string name="activity_new_game_button_cancel">Cancel</string>
    <string name="activity_new_game_button_start_new_game">Start New Game</string>

    <!--ActivityNewGameConfirm Strings-->
    <string name="activity_new_game_confirm_text">Existing save data will be overwritten. Proceed to overwrite?</string>
    <string name="activity_new_game_confirm_warning_text">WARNING: OVERWRITTEN DATA WILL BE PERMANENTLY LOST.</string>
    <string name="activity_new_game_confirm_button_cancel">Cancel</string>
    <string name="activity_new_game_confirm_button_overwrite">Overwrite</string>
    <string name="activity_new_game_confirm_button_arm">Arm</string>
    <string name="activity_new_game_confirm_button_disarm">Disarm</string>

    <!--ActivityAbout Strings-->
    <string name="activity_about_description"><b>Warrior is an RPG for the Android platform, made in Android Studio. \n\nCoded by ardetor (accypiter).</b>\n\n\n\n\n<u>Legal information:</u>\n\nThis app uses the TwoDScrollView class, originally made by Matt Clark and modified by Jared Rummler, under the Apache Licence 2.0. This class (and by extension, this app) may not be used except in compliance with the License. You may obtain a copy of the License at:\nhttp://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.\n\n\nThis app uses icons from Icons8, available at icons8.com/web-app/</string>


    <!--ActivitySummary Strings-->
    <string name="activity_summary_button_journal">Journal</string>
    <string name="activity_summary_button_map">Map</string>
    <string name="activity_summary_button_health">Health</string>
    <string name="activity_summary_button_skills">Skills</string>
    <string name="activity_summary_button_inventory">Inventory</string>
    <string name="activity_summary_button_magic">Magic</string>
    <string name="activity_summary_button_undiscovered">\?\?\?</string>


    <!--ActivityJournalDetail Strings-->
    <string name="activity_journal_detail_error_notfound">Error - index of journal entry to display not found in Intent</string>
    <string name="activity_journal_detail_error_exceed">Error - index of requested journal entry exceeds current journal length</string>


    <!--ActivityHealthThird Strings-->
    <string name="activity_health_third_message_dark">You have been afflicted with Dark damage. This type of damage does not heal by itself, and will get worse over time. You are advised to magically heal this wound as soon as possible to prevent contagion, or seek help if you are unable to deal with it yourself.</string>


    <!--Title Strings-->
    <string name="title_activity_summary">Summary</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_new_game">New Game</string>
    <string name="title_activity_new_game_confirm">Confirm Overwrite Data</string>
    <string name="title_activity_preferences">Settings</string>
    <string name="title_activity_fight">Fight</string>
    <string name="title_activity_journal">Journal</string>
    <string name="title_activity_journal_detail">Journal Entry</string>
    <string name="title_activity_health">Health</string>
    <string name="title_activity_health_second">Limb</string>
    <string name="title_activity_health_third">Details</string>
    <string name="title_activity_skills">Skills</string>
</resources>
