<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.accypiter.warriorv0_4.ActivityNewGame"
    tools:showIn="@layout/activity_new_game"
    android:id="@+id/activity_new_game_confirm_rellay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:orientation="vertical"
        android:id="@+id/activity_new_game_confirm_linlay_button"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/activity_new_game_confirm_linlay_arm_overwrite">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/activity_new_game_confirm_button_arm"
                android:text="@string/activity_new_game_confirm_button_arm"
                android:onClick="armOverwrite" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/activity_new_game_confirm_button_overwrite"
                android:text="@string/activity_new_game_confirm_button_overwrite"
                android:onClick="confirmOverwrite"
                android:enabled="false"
                android:textColor="#5f00"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_new_game_confirm_button_cancel"
            android:text="@string/activity_new_game_confirm_button_cancel"
            android:onClick="cancelOverwrite"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/activity_new_game_confirm_linlay_button"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_new_game_confirm_text"
                android:text="@string/activity_new_game_confirm_text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_new_game_confirm_warning_text"
                android:text="@string/activity_new_game_confirm_warning_text"
                android:textColor="#ffff0000"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>